--- a/Pages/Admin/SubCategorySelector.razor
+++ b/Pages/Admin/SubCategorySelector.razor
@@ -60,16 +60,22 @@
 
 <div class="form-group">
     <label>Sous-catégorie</label>
-    <MudStack Row Class="py-1">
-        <MudSelect T="int?" @bind-Value="SelectedId" Label="Sélectionnez une sous-catégorie">
-            <MudSelectItem T="int?" Value="@(null)">Sélectionnez une sous-catégorie</MudSelectItem>
-            @foreach (var subCategory in subCategories)
-            {
-                <MudSelectItem T="int?" Value="@subCategory.SubCategoryID">@subCategory.Name</MudSelectItem>
-            }
-        </MudSelect>
-        <MudButton StartIcon="@Icons.Material.Filled.Add" OnClick="@OpenNewItemModal" Variant="Variant.Filled">
-            Nouvelle sous-catégorie
-        </MudButton>
-    </MudStack>
+    <MudGrid Class="py-4">
+
+        <MudItem xs="4">
+            <MudSelect T="int?" @bind-Value="SelectedId" Label="Sélectionnez une sous-catégorie">
+                <MudSelectItem T="int?" Value="@(null)">Sélectionnez une sous-catégorie</MudSelectItem>
+                @foreach (var subCategory in subCategories)
+                {
+                    <MudSelectItem T="int?" Value="@subCategory.SubCategoryID">@subCategory.Name</MudSelectItem>
+                }
+            </MudSelect>
+        </MudItem>
+        <MudItem xs="4">
+
+            <MudButton StartIcon="@Icons.Material.Filled.Add" OnClick="@OpenNewItemModal" Variant="Variant.Filled">
+                Nouvelle sous-catégorie
+            </MudButton>
+        </MudItem>
+    </MudGrid>
 </div>
